test/files/neg/t8700b-old.check
Bar_2.scala:4: warning: match may not be exhaustive.
It would fail on the following input: B
  def bar1(foo: Foo_1) = foo match {
                         ^
Bar_2.scala:8: warning: match may not be exhaustive.
It would fail on the following input: B
  def bar2(foo: Baz_1) = foo match {
                         ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
